更新 Portable 启动参数